--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongodb": "^6.11.0"
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
+    "zod": "^3.23.8"
   }
 }
