--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-    "name": "sreatt-backend",
-    "version": "1.0.0",
-    "type": "module",
-    "main": "src/server.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+  "version": 2,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/server.js"
     }
-  }
-  
+  ]
+}
