--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "streamifier": "^0.1.1",
+    "twilio": "^5.3.6",
     "uuid": "^11.0.3",
+    "uuidv4": "^6.2.13",
     "winston": "^3.17.0",
     "zod": "^3.23.8"
   }
